--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,13 @@
         <EditText android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/a"
-                  android:inputType="number"
+                  android:inputType="numberSigned"
                 />
-        <CheckBox android:layout_width="wrap_content"
+    <!--    <CheckBox android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/aneg"
 
-                />
+                />-->
     </LinearLayout>
 
     <LinearLayout android:layout_width="fill_parent"
@@ -53,15 +53,15 @@
         <EditText android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/b"
-                  android:inputType="number"
+                  android:inputType="numberSigned"
 
                 />
 
-        <CheckBox android:layout_width="wrap_content"
+  <!--      <CheckBox android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/bneg"
 
-                />
+                />-->
     </LinearLayout>
 
     <LinearLayout android:layout_width="match_parent"
@@ -76,13 +76,13 @@
         <EditText android:layout_width="250dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/c"
-                  android:inputType="number"
+                  android:inputType="numberSigned"
                 />
-        <CheckBox android:layout_width="wrap_content"
+   <!--     <CheckBox android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/cneg"
 
-                />
+                /> -->
     </LinearLayout>
 
 
