--- a/app/src/main/res/layout/activity_main_activity2.xml
+++ b/app/src/main/res/layout/activity_main_activity2.xml
@@ -41,5 +41,14 @@
             android:layout_gravity="center_horizontal"
             android:textSize="24sp"
             />
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
 
+            >
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:text="Developed by Abderrahmane Bentaiba"
+                  android:layout_alignParentBottom="true"
+
+                />
+
+    </RelativeLayout>
 </LinearLayout>
